# flow-service

./: .gitignore  README.md  fluxo.json  pyproject.toml
src/app/: main.py
src/app/core/: state.py
src/app/models/: flow.py
src/app/routes/: content.py  entering.py  import_flow.py  leaving.py
src/app/services/: extractor.py  mcp.py
